# pil2-proofman

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  build.sh  clean.sh  corrupt-lookup-proof.sh  generate-fri-vectors.sh  generate-test-vectors.sh  generate-zisk-test-vectors.sh  run-all-tests.sh  run-e2e-tests.sh  run-proofman.sh  setup.sh  test-fri.sh  test-pinning.sh  test_pinning.sh
.claude/agents/: crypto-spec-simplifier.md  faithful-spec-translator.md  human-simplicity-enforcer.md  protocol-purity-guardian.md  type-enforcer.md  zksnark-python-style.md
.claude/commands/: simplify-spec.md
ai_notes/: lattice-expansion-algorithm.md  vadcop-architecture.md  verifier-clarity-questions.md  verifier-simplification-meta-plan.md
ai_plans/: cpp-reference-annotations.md  expression-evaluator-performance.md  final-readability-simplification.md  fri-pcs-integration.md  fri-pcs-modularization.md  native-galois-migration.md  simplify-gen-proof-api.md  soa-elimination-refactor.md  verifier-simplification-complete.md  zisk-hybrid-bytecode.md
docs/plans/: 2026-01-30-remove-expression-binaries-design.md  2026-01-30-remove-expression-binaries-impl.md  BLOCKER.md  PROGRESS.md
executable-spec/: E2E_TEST_INVESTIGATION.md  NOTES.md  README.md  STYLE_GUIDE.md  __init__.py  bytecode_utils.py  conftest.py  create-test-vectors.py  expressions.py  expressions_bin.py  field.py  fri.py  fri_pcs.py  gen_proof.py  merkle_tree.py  ntt.py  pol_map.py  poseidon2.py  profile_prover.py  proof.py  proof_loader.py  pyproject.toml  pyrightconfig.json  requirements.txt  run-tests.sh  setup.sh  setup_ctx.py  stark_info.py  stark_verify.py  starks.py  test_expressions_bin.py  test_fri.py  test_galois_omega.py  test_ntt.py  test_pinning.py  test_proof.py  test_prove_e2e.py  test_stark_e2e.py  test_stark_info.py  test_vectors.py  (+3 more)
executable-spec/.claude/agents/: paranoid-skeptic.md
executable-spec/constraints/: __init__.py  base.py  bytecode_adapter.py  lookup2_12.py  permutation1_6.py  simple_left.py
executable-spec/poseidon2-ffi/: pyproject.toml
executable-spec/primitives/: __init__.py  batch_inverse.py  ff3_cache.pkl  field.py  merkle_prover.py  merkle_tree.py  merkle_verifier.py  ntt.py  pol_map.py  polynomial.py  transcript.py
executable-spec/primitives/expression_bytecode/: __init__.py  expression_evaluator.py  expressions_bin.py  witness_generation.py
executable-spec/protocol/: __init__.py  air_config.py  data.py  expression_evaluator.py  expressions.py  expressions_bin.py  fri.py  fri_polynomial.py  global_info.py  pcs.py  proof.py  proof_context.py  prover.py  setup_ctx.py  stages.py  stark_info.py  stark_verify.py  starks.py  steps_params.py  verifier.py  witness_generation.py  witness_std.py
executable-spec/protocol/utils/: challenge_utils.py
executable-spec/test-data/: lookup2-12.json  simple-left.json
executable-spec/tests/: __init__.py  conftest.py  create-test-vectors.py  expressions_bin.py  fri_vectors.py  gen_proof.py  json-proof-to-bin.py  proof.py  setup_ctx.py  steps_params.py  test_batch_inverse.py  test_bytecode_equivalence.py  test_constraint_context.py  test_constraint_verifier.py  test_data.py  test_expressions_bin.py  test_fri.py  test_lookup2_12_constraints.py  test_lookup2_12_witness.py  test_ntt.py  test_permutation1_6_constraints.py  test_permutation1_6_witness.py  test_proof.py  test_simple_left_constraints.py  test_simple_left_witness.py  test_stark_e2e.py  test_stark_info.py  test_verifier_e2e.py  test_witness_base.py  test_witness_comparison.py  test_zisk_vadcop_final_e2e.py  test_zisk_verifier_e2e.py
executable-spec/tests/test-data/: .gitkeep
executable-spec/tests/test-data/zisk/: global_challenge.json  publics.json
executable-spec/witness/: __init__.py  base.py  bytecode_adapter.py  lookup2_12.py  permutation1_6.py  simple_left.py
fri_spec/: TODO_PROVE_VERIFY.md  __init__.py  constants.py  extract_vectors.py  field.py  fri.py  fri_pcs.py  poseidon2.py  proof_loader.py  test_pinning.py  test_vectors.py  transcript.py
fri_spec/vectors/: lookup2_12_2.json
lean-verifier/: FFI.lean  LeanVerifier.lean  Main.lean  Primitives.lean  Protocol.lean  lake-manifest.json  lakefile.lean
lean-verifier/FFI/: Constraints.lean  Poseidon2.lean
lean-verifier/Primitives/: Field.lean  MerkleVerifier.lean  PolMap.lean  Polynomial.lean  Transcript.lean
lean-verifier/Protocol/: AirConfig.lean  ChallengeUtils.lean  Data.lean  FRI.lean  Proof.lean  StarkInfo.lean  Verifier.lean
lean-verifier/Tests/: Main.lean  TestData.lean  TestFRI.lean  TestField.lean  TestMerkle.lean  TestPolynomial.lean  TestPoseidon2.lean  TestProof.lean  TestStarkInfo.lean  TestTranscript.lean  TestVadcopFinal.lean  TestVerifier.lean  TestZiskVerifier.lean
lean-verifier/Tests/test-data/: SimpleLeft.starkinfo.json  zisk
lean-verifier/ffi/: constraints_lean.h
lean-verifier/ffi/constraints/: Cargo.toml  build.rs
lean-verifier/ffi/constraints/src/: evaluator.rs  expressions_bin.rs  field.rs  lean_shim.c  lib.rs  starkinfo.rs
lean-verifier/ffi/poseidon2/: Cargo.toml
lean-verifier/ffi/poseidon2/src/: lean_shim.c  lib.rs
old_ai_plans/: add-global-challenge-to-gen-proof.md  address-todo-comments.md  canonical-proof-bytes.md  clarify-steps-terminology.md  complete-python-executable-spec.md  compute-global-challenge-internally.md  expression-evaluator-abstraction-research.md  expression-evaluator-comments.md  expression-evaluator-deep-refactor.md  expression-evaluator-simplification.md  expression-evaluator-vectorization.md  field-type-centralization.md  full-proof-byte-equivalence.md  prover-style-review.md  remove-expression-binaries.md  soa-elimination-refactor.md  style-enforcement.md  type-signature-cleanup.md  verifier-e2e-test.md  verifier-simplification.md  verifier-style-review.md  witness-module-integration.md
pil2-stark/: Makefile
pil2-stark/src/api/: starks_api.cpp  (+2 more)
pil2-stark/tests/: Makefile
poseidon2_ffi/: Cargo.toml
poseidon2_ffi/src/: constants.rs  lib.rs
proofman/src/: proofman.rs
provers/starks-lib-c/: bindings_starks.rs
tests/pinning/: Cargo.toml
(+43 files in other folders)
