[workspace.package]
version = "0.15.0"
edition = "2021"
license = "Apache-2.0 or MIT"
keywords = ["pil2-proofman", "prover", "zero-knowledge"]
repository = "https://github.com/0xPolygonHermez/pil2-proofman"
categories = ["cryptography"]

[workspace]
members = [
    # Core crates
    "cli",
    "curves",
    "common",
    "fields",
    "hints",
    "pilout",
    "proofman",
    "macros",
    "provers/starks-lib-c",
    "witness",
    "util",
    "verifier",

    # PIL2 components library
    "pil2-components/lib/std/rs",

    # PIL2 component tests
    "pil2-components/test/connection/rs",
    "pil2-components/test/diff_buses/rs",
    "pil2-components/test/direct_update/rs",
    "pil2-components/test/lookup/rs",
    "pil2-components/test/one_instance/rs",
    "pil2-components/test/permutation/rs",
    "pil2-components/test/range_check/rs",
    "pil2-components/test/simple/rs",
    "pil2-components/test/virtual_tables/rs",

    # Examples
    "examples/fibonacci-square",
    "examples/test-recursive",
    "macros-test",

    # Pinning tests (golden file validation)
    "tests/pinning",
]

default-members = [
    "cli",
    "curves",
    "common",
    "fields",
    "hints",
    "pilout",
    "proofman",
    "macros",
    "provers/starks-lib-c",
    "witness",
    "util",
    "verifier",
]

resolver = "2"

[profile.release.package."proofman-verifier"]
opt-level = 0


[workspace.dependencies]
proofman-macros = { path = "macros" }
proofman = { path = "proofman" }
proofman-common = { path = "common" }
proofman-hints = { path = "hints" }
proofman-util = { path = "util" }
proofman-cli = { path = "cli" }
pil-std-lib = { path = "pil2-components/lib/std/rs" }
witness = { path = "witness" }
pilout = { path = "pilout" }
fields = { path = "fields" }
log = { version = "0.4", default-features = false }
env_logger = "0.11"
bytes = "1.7"
prost = "0.13"
rand = "0.9"
num-bigint = "0.4"
prost-build = "0.13"
num-traits = "0.2"
crossbeam-channel = "0.5.15"
rayon = "1"
serde = { version = "1.0.130", features = ["derive"] }
bytemuck = "1.23.1"
serde_json = "1.0.68"
serde_arrays = "0.2"
colored = "3"
tracing = "0.1"
libloading = "0.8.7"
sysinfo = "0.35.1"
blake3 = "1.3.1"
csv = "1.3.1"
borsh = { version = "1.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7.16"
thiserror = { version = "2" }
