[project]
name = "executable-spec"
version = "0.1.0"
description = "FRI executable specification for pil2-proofman"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.uv.sources]
galois = { git = "https://github.com/codygunton/galois", branch = "custom-omega" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
