[project]
name = "executable-spec"
version = "0.1.0"
description = "FRI executable specification for pil2-proofman"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pytest>=7.0.0",
    "poseidon2-ffi",
    "galois",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.uv.sources]
galois = { git = "https://github.com/codygunton/galois", branch = "custom-omega" }
poseidon2-ffi = { path = "poseidon2-ffi", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "*.py",
    "test-data/*.json",
]
