[project]
name = "executable-spec"
version = "0.1.0"
description = "FRI executable specification for pil2-proofman"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "poseidon2-ffi",
    "galois",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.uv.sources]
galois = { git = "https://github.com/codygunton/galois", branch = "custom-omega" }
poseidon2-ffi = { path = "primitives/poseidon2-ffi", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]

[tool.hatch.build.targets.wheel]
packages = ["primitives", "protocol", "tests"]
only-include = [
    "primitives/*.py",
    "protocol/*.py",
    "tests/*.py",
    "tests/test-data/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations (type hints)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "ANN401", # Dynamically typed expressions (Any)
    "E501",   # line too long (handled by formatter)
    "SIM102", # nested if statements - we prefer explicit for readability
]

[tool.ruff.lint.isort]
known-first-party = ["primitives", "protocol"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
