[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "poseidon2_ffi"
version = "0.1.0"
description = "Python FFI bindings for Poseidon2 hash function over Goldilocks field"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "poseidon2_ffi"
