[package]
name = "constraints-lean"
version = "0.1.0"
edition = "2021"
description = "Constraint bytecode evaluator FFI for Lean verifier over Goldilocks field"

# Keep this crate independent from the main workspace
[workspace]

[lib]
name = "constraints_lean"
crate-type = ["staticlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cc = "1"

[profile.release]
opt-level = 3
lto = true
