[package]
name = "poseidon2-lean"
version = "0.1.0"
edition = "2021"
description = "Poseidon2 hash FFI for Lean verifier over Goldilocks field"

# Keep this crate independent from the main workspace
[workspace]

[lib]
name = "poseidon2_lean"
crate-type = ["staticlib"]

[build-dependencies]
cc = "1"

[profile.release]
opt-level = 3
lto = true
